--- a/resources/cluster/kustomization.yml
+++ b/resources/cluster/kustomization.yml
@@ -1,8 +1,7 @@
-kind: kustomization
+kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/kind/deploy.yaml
-- https://github.com/jetstack/cert-manager/releases/download/v1.0.2/cert-manager.yaml
+- https://github.com/jetstack/cert-manager/releases/download/v1.5.4/cert-manager.yaml
 - cluster-issuer.yml
-- external-dns.yml
-- ingress.yml
+# - https://projectcontour.io/examples/kuard.yaml
