--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,9 @@ on:
         description: 'Name of deployment/docker tag.'
         required: false
 jobs:
-  validate:
-    runs-on: ubuntu-20.04
-    steps:
-    -
   deploy:
     runs-on: ubuntu-20.04
     steps:
+    - run: echo INFRA-3099
     - run: echo Deploying ${{ github.event.inputs.ref }} to ${{ github.event.inputs.name }}@${{ github.event.inputs.env }}
 
